--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" class="no-js">
   {% include head-vs.html %} 
-  {% include appinsights.html %}
+  <!--{% include appinsights.html %}-->
   <body>
     {% include header-vs.html %}
 
